Fix default link colour to be higher contrast

--- a/assets/ananke/css/_styles.css
+++ b/assets/ananke/css/_styles.css
@@ -16,6 +16,7 @@
 }
 
 .nested-links a {
+  color: #00449E;
   overflow-wrap: break-word;
 }
 
